@@ -13,3 +13,14 @@ endif
 if read1($05DAA3) == $5C
     error "This patch is not compatible with the Multiple Midway Points patch. Insertion aborted."
 endif
+
+; Warn if SRAM/BW-RAM plus are patched in already and !sram_feature = 1 (also force it to 0).
+if !sram_feature && not(!sa1) && !sram_plus
+    print "Warning: SRAM Plus was detected in your ROM. Retry's save feature won't be inserted."
+    !sram_feature = 0
+endif
+
+if !sram_feature && !sa1 && !bwram_plus
+    print "Warning: BW-RAM Plus was detected in your ROM. Retry's save feature won't be inserted."
+    !sram_feature = 0
+endif
