@@ -5,6 +5,8 @@ v0.4.1:
       - Now the SFX echo will always work the first time entering a room, even if the echo delay is very high.
       - Now the SFX echo will stay enabled even when changing music in the middle of the level (assuming the new music doesn't disable echo altogether). This is most notable for P-Switch and Starman songs, which will keep the level's echo, and thus also the SFX echo, while (and after) they play.
     - Added !infinite_lives setting, to more easily toggle between infinite and finite lives. The lose_lives table can still be used to prevent life loss in some levels when using !infinite_lives = 0.
+    - Fixed compilation error introduced in v0.3.3, when using !sram_feature = 1 and the SRAM+/BW-RAM+ patch is installed in the ROM.
+    - Moved Retry's SRAM tables to separate "sram_tables.asm" file for more simplicity of use and consistency, and made it insert only when using !sram_feature = 1 to save some ROM space.
 
 v0.4.0:
     - Changed default !pipe_entrance_freeze setting to 1 to avoid inconsistencies.
